--- a/_data/actuatorList.yml
+++ b/_data/actuatorList.yml
@@ -5,7 +5,7 @@
   link:
     url: "/products/prod-1"
     display: Product link
-  highlight: 1
+  highlight: 0
   news:
   data:
     Maximum Torque: 180 Nm
@@ -20,7 +20,7 @@
   link:
     url: "/products/prod-1"
     display: Product link
-  highlight: 1
+  highlight: 0
   news:
   data:
     Maximum Torque: 180 Nm
@@ -28,7 +28,7 @@
     Force Sensor: Accuracy +/- 1%
     Motor Type: Brushless servo motor
 
-- title: Beta Actuator
+- title: Smart High Torque Density Actuator
   image: Beta_Actuator_Thumbnail.png
   description: This is actuator \#3
   category: actuator
@@ -38,7 +38,8 @@
   highlight: 1
   news:
   data:
-    Maximum Torque: 180 Nm
-    Range of Motion: 45 degrees
-    Force Sensor: Accuracy +/- 1%
+    Nominal Power: 330 W
+    Nominal Voltage: 48 V
+    Peak Torque: 35 Nm
+    Full Range of Phase Current: 12.5 A
     Motor Type: Brushless servo motor
